added some changes to the run script and utilized ProcessBuilder